--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,9 @@
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"dbaeumer.vscode-eslint"
+		"dbaeumer.vscode-eslint",
+		"betterthantomorrow.calva",
+		"borkdude.clj-kondo"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
