--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "copy": "npm run copy:antd-css"
   },
   "dependencies": {
+    "@ant-design/charts": "^1.0.1",
     "@ant-design/icons": "^4.2.2",
     "antd": "^4.7.2",
     "create-react-class": "^15.7.0",
